Fixed: Overflow caused by tooltip

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,9 @@
 html {
   min-height: 100vh;
+  overflow-x: hidden;
+}
+
+#App {
+    position: relative;
+    overflow-x: hidden;
 }
